(rule
  (targets General.mli)
  (deps
    (:src General.cppo.mli)
    geni.py
    Generated/Atoms.mli
    Generated/Concepts.mli
    Generated/Traits.mli
    Generated/Wrappers.mli
    Reset/CommonHeader.ml
    Reset/Footer.ml
    Reset/ResetPervasives.ml
    Reset/ResetStandardLibrary.ml
    Reset/SignatureHeader.ml
    Traits/FilterMapable.signatures.ToContainer.ml
    Traits/FilterMapable.signatures.ml
    Traits/Foldable.signatures.Basic.ml
    Traits/Foldable.signatures.Right.Basic.ml
    Traits/Foldable.signatures.Right.ml
    Traits/Foldable.signatures.Short.Basic.ml
    Traits/Foldable.signatures.Short.Right.Basic.ml
    Traits/Foldable.signatures.Short.Right.ml
    Traits/Foldable.signatures.Short.ml
    Traits/Foldable.signatures.ml
    Traits/Scanable.signatures.Right.ToContainer.ml
    Traits/Scanable.signatures.Right.ml
    Traits/Scanable.signatures.Short.Right.ToContainer.ml
    Traits/Scanable.signatures.Short.Right.ml
    Traits/Scanable.signatures.Short.ToContainer.ml
    Traits/Scanable.signatures.Short.ml
    Traits/Scanable.signatures.ToContainer.ml
    Traits/Scanable.signatures.ml
  )
  (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{src} -o %{targets}))
)

(rule
  (targets General.ml)
  (deps
    (:src General.cppo.ml)
    geni.py
    Atoms/BigInt.ml
    Atoms/Bool.foundations.ml
    Atoms/Bool.ml
    Atoms/Bytes.ml
    Atoms/CallStack.foundations.ml
    Atoms/CallStack.ml
    Atoms/Char.ml
    Atoms/Exception.foundations.ml
    Atoms/Exception.ml
    Atoms/Exit.foundations.ml
    Atoms/Exit.ml
    Atoms/Float.foundations.ml
    Atoms/Float.ml
    Atoms/Function1.foundations.ml
    Atoms/Function1.ml
    Atoms/Function2.ml
    Atoms/Function3.ml
    Atoms/Function4.ml
    Atoms/Function5.ml
    Atoms/Int.foundations.ml
    Atoms/Int.ml
    Atoms/Int32.ml
    Atoms/Int64.ml
    Atoms/NativeInt.ml
    Atoms/String.foundations.ml
    Atoms/String.ml
    Atoms/Unit.foundations.ml
    Atoms/Unit.ml
    Compare.ml
    Concepts/Able.ml
    Concepts/FixedWidthInteger.ml
    Concepts/Identifiable.ml
    Concepts/Integer.ml
    Concepts/Number.ml
    Concepts/OfStandardNumber.ml
    Concepts/RealNumber.ml
    Concepts/Stringable.ml
    Concepts/ToStandardNumber.ml
    Concepts/empty_concept.ml
    Equate.ml
    Foundations/Format.ml
    Foundations/IntRange.ml
    Foundations/List.ml
    Foundations/PervasivesWhitelist.ml
    Foundations/Stream.ml
    Generated/Atoms/BigInt.ml
    Generated/Atoms/Bool.ml
    Generated/Atoms/Bytes.ml
    Generated/Atoms/CallStack.ml
    Generated/Atoms/CallStack/Frame.ml
    Generated/Atoms/CallStack/Location.ml
    Generated/Atoms/Char.ml
    Generated/Atoms/Exception.ml
    Generated/Atoms/Exit.ml
    Generated/Atoms/Float.ml
    Generated/Atoms/Float/Class.ml
    Generated/Atoms/Function1.ml
    Generated/Atoms/Function2.ml
    Generated/Atoms/Function3.ml
    Generated/Atoms/Function4.ml
    Generated/Atoms/Function5.ml
    Generated/Atoms/Int.ml
    Generated/Atoms/Int32.ml
    Generated/Atoms/Int64.ml
    Generated/Atoms/NativeInt.ml
    Generated/Atoms/String.ml
    Generated/Atoms/Unit.ml
    Generated/Concepts/Able.ml
    Generated/Concepts/FixedWidthInteger.ml
    Generated/Concepts/Identifiable.ml
    Generated/Concepts/Integer.ml
    Generated/Concepts/Number.ml
    Generated/Concepts/OfStandardNumber.ml
    Generated/Concepts/RealNumber.ml
    Generated/Concepts/Stringable.ml
    Generated/Concepts/ToStandardNumber.ml
    Generated/Traits/Bitwise.ml
    Generated/Traits/Bounded.ml
    Generated/Traits/Comparable.ml
    Generated/Traits/Displayable.ml
    Generated/Traits/Equatable.ml
    Generated/Traits/OfFloat.ml
    Generated/Traits/OfInt.ml
    Generated/Traits/Parsable.ml
    Generated/Traits/PredSucc.ml
    Generated/Traits/Representable.ml
    Generated/Traits/Ringoid.ml
    Generated/Traits/ToFloat.ml
    Generated/Traits/ToInt.ml
    Generated/Wrappers/Lazy.ml
    Generated/Wrappers/Option.ml
    Generated/Wrappers/Reference.ml
    Generated/Wrappers/Tuple2.ml
    Generated/Wrappers/Tuple3.ml
    Generated/Wrappers/Tuple4.ml
    Generated/Wrappers/Tuple5.ml
    Implementation/Array.ml
    Implementation/BinaryHeap.ml
    Implementation/Format.ml
    Implementation/Heap.ml
    Implementation/InChannel.ml
    Implementation/InFile.ml
    Implementation/IntRange.ml
    Implementation/List.ml
    Implementation/OutChannel.ml
    Implementation/OutFile.ml
    Implementation/PriorityQueue.ml
    Implementation/RedBlackTree.ml
    Implementation/SortedMap.ml
    Implementation/SortedSet.ml
    Implementation/StandardInt.ml
    Implementation/StandardOutChannel.ml
    Implementation/StdErr.ml
    Implementation/StdIn.ml
    Implementation/StdOut.ml
    Implementation/Stream.ml
    Reset/CommonHeader.ml
    Reset/DefinitionHeader.ml
    Reset/Footer.ml
    Reset/ResetPervasives.ml
    Reset/ResetStandardLibrary.ml
    Shorten.ml
    Specializations/List.ml
    Specializations/Option.ml
    Specializations/Reference.ml
    Specializations/SortedMap.ml
    Specializations/SortedSet.ml
    Testing/Test.ml
    Testing/Testing.ml
    Testing/Tests.ml
    Traits/Bitwise.ml
    Traits/Bounded.ml
    Traits/Comparable.ml
    Traits/Displayable.ml
    Traits/Equatable.ml
    Traits/FilterMapable.ml
    Traits/FilterMapable.signatures.ToContainer.ml
    Traits/FilterMapable.signatures.ml
    Traits/Foldable.ml
    Traits/Foldable.signatures.Basic.ml
    Traits/Foldable.signatures.Right.Basic.ml
    Traits/Foldable.signatures.Right.ml
    Traits/Foldable.signatures.Short.Basic.ml
    Traits/Foldable.signatures.Short.Right.Basic.ml
    Traits/Foldable.signatures.Short.Right.ml
    Traits/Foldable.signatures.Short.ml
    Traits/Foldable.signatures.ml
    Traits/OfFloat.ml
    Traits/OfInt.ml
    Traits/Parsable.ml
    Traits/PredSucc.ml
    Traits/Representable.ml
    Traits/Ringoid.ml
    Traits/Scanable.ml
    Traits/Scanable.signatures.Right.ToContainer.ml
    Traits/Scanable.signatures.Right.ml
    Traits/Scanable.signatures.Short.Right.ToContainer.ml
    Traits/Scanable.signatures.Short.Right.ml
    Traits/Scanable.signatures.Short.ToContainer.ml
    Traits/Scanable.signatures.Short.ml
    Traits/Scanable.signatures.ToContainer.ml
    Traits/Scanable.signatures.ml
    Traits/ToFloat.ml
    Traits/ToInt.ml
    Traits/empty_trait.ml
    Wrappers/Lazy.foundations.ml
    Wrappers/Lazy.ml
    Wrappers/Option.foundations.ml
    Wrappers/Option.ml
    Wrappers/Reference.foundations.ml
    Wrappers/Reference.ml
    Wrappers/Tuple2.foundations.ml
    Wrappers/Tuple2.ml
    Wrappers/Tuple3.foundations.ml
    Wrappers/Tuple3.ml
    Wrappers/Tuple4.foundations.ml
    Wrappers/Tuple4.ml
    Wrappers/Tuple5.foundations.ml
    Wrappers/Tuple5.ml
  )
  (action (run %{bin:cppo} -V OCAML:%{ocaml_version} %{src} -o %{targets}))
)

(library
  (name General)
  (public_name General)
  (modules General)
  (libraries num)
  (flags (:standard -nopervasives -w @A-4-33-44-45-48))
)
