(rule
  (targets General.ml)
  (deps ../src/General_for_tests.ml)
  (action (copy ../src/General_for_tests.ml General.ml))
)

(executable
  (name run_all_tests)
  (libraries num)
  (js_of_ocaml (flags "+nat.js"))
)

(alias
  (name runtest)
  (deps run_all_tests.bc)
  (action (run %{exe:run_all_tests.bc}))
)

(alias
  (name runtest)
  (deps run_all_tests.exe)
  (action (run %{exe:run_all_tests.exe}))
)

(alias
  (name runtest)
  (deps run_all_tests.bc.js)
  (action (run %{bin:node} %{exe:run_all_tests.bc.js}))
)
